--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </div>
         </div>
 
-       <div id="cardHolderOutside">
+       <div id="cardHolderOutside" class="mt-3">
            <div class="instruct">Solve the question below</div>
            <div class="clearQuestion text-center">Solve the question below</div>
            <div class="congratsPopUp">
